@@ -114,27 +114,27 @@ rpm	alias --timecheck	--define '_timecheck !#:+'
 # Popt glue to preserve legacy CLI behavior.
 #
 # XXX popt exec parsing doesn't honor POPT_ARGFLAG_ONEDASH
-rpm	exec --bp		rpmb -bp
-rpm	exec --bc		rpmb -bc
-rpm	exec --bi		rpmb -bi
-rpm	exec --bl		rpmb -bl
-rpm	exec --ba		rpmb -ba
-rpm	exec --bb		rpmb -bb
-rpm	exec --bs		rpmb -bs
-rpm	exec --tp		rpmb -tp
-rpm	exec --tc		rpmb -tc
-rpm	exec --ti		rpmb -ti
-rpm	exec --tl		rpmb -tl
-rpm	exec --ta		rpmb -ta
-rpm	exec --tb		rpmb -tb
-rpm	exec --ts		rpmb -ts
-rpm	exec --rebuild		rpmb --rebuild
-rpm	exec --recompile	rpmb --recompile
-rpm	exec --clean		rpmb --clean
-rpm	exec --rmsource		rpmb --rmsource
-rpm	exec --rmspec		rpmb --rmspec
-rpm	exec --target		rpmb --target
-rpm	exec --short-circuit	rpmb --short-circuit
+#rpm	exec --bp		rpmb -bp
+#rpm	exec --bc		rpmb -bc
+#rpm	exec --bi		rpmb -bi
+#rpm	exec --bl		rpmb -bl
+#rpm	exec --ba		rpmb -ba
+#rpm	exec --bb		rpmb -bb
+#rpm	exec --bs		rpmb -bs
+#rpm	exec --tp		rpmb -tp
+#rpm	exec --tc		rpmb -tc
+#rpm	exec --ti		rpmb -ti
+#rpm	exec --tl		rpmb -tl
+#rpm	exec --ta		rpmb -ta
+#rpm	exec --tb		rpmb -tb
+#rpm	exec --ts		rpmb -ts
+#rpm	exec --rebuild		rpmb --rebuild
+#rpm	exec --recompile	rpmb --recompile
+#rpm	exec --clean		rpmb --clean
+#rpm	exec --rmsource		rpmb --rmsource
+#rpm	exec --rmspec		rpmb --rmspec
+#rpm	exec --target		rpmb --target
+#rpm	exec --short-circuit	rpmb --short-circuit
 
 rpm	exec --initdb		rpmd --initdb
 rpm	exec --rebuilddb	rpmd --rebuilddb
@@ -157,17 +157,17 @@ rpm	exec -V			rpmv -V
 rpm	exec -y			rpmv -y
 rpm	exec --verify		rpmv --verify
 
-rpm	alias --with		--define "_with_!#:+       --with-!#:+"
-rpm	alias --without		--define "_without_!#:+    --without-!#:+"
+#rpm	alias --with		--define "_with_!#:+       --with-!#:+"
+#rpm	alias --without		--define "_without_!#:+    --without-!#:+"
 #==============================================================================
-rpmb	alias --dbpath		--define '_dbpath !#:+'
-rpmb	alias --ftpport		--define '_ftpport !#:+'
-rpmb	alias --ftpproxy	--define '_ftpproxy !#:+'
-rpmb	alias --httpport	--define '_httpport !#:+'
-rpmb	alias --httpproxy	--define '_httpproxy !#:+'
-rpmb	alias --timecheck	--define '_timecheck !#:+'
-rpmb	alias --with		--define "_with_!#:+       --with-!#:+"
-rpmb	alias --without		--define "_without_!#:+    --without-!#:+"
+#rpmb	alias --dbpath		--define '_dbpath !#:+'
+#rpmb	alias --ftpport		--define '_ftpport !#:+'
+#rpmb	alias --ftpproxy	--define '_ftpproxy !#:+'
+#rpmb	alias --httpport	--define '_httpport !#:+'
+#rpmb	alias --httpproxy	--define '_httpproxy !#:+'
+#rpmb	alias --timecheck	--define '_timecheck !#:+'
+#rpmb	alias --with		--define "_with_!#:+       --with-!#:+"
+#rpmb	alias --without		--define "_without_!#:+    --without-!#:+"
 #==============================================================================
 rpmbuild	alias --dbpath		--define '_dbpath !#:+'
 rpmbuild	alias --ftpport		--define '_ftpport !#:+'
@@ -177,12 +177,18 @@ rpmbuild	alias --httpproxy	--define '_httpproxy !#:+'
 rpmbuild	alias --timecheck	--define '_timecheck !#:+'
 rpmbuild	alias --with		--define "_with_!#:+     --with-!#:+"
 rpmbuild	alias --without		--define "_without_!#:+  --without-!#:+"
-==============================================================================
+#==============================================================================
 rpmd	alias --dbpath		--define '_dbpath !#:+'
 rpmd	alias --ftpport		--define '_ftpport !#:+'
 rpmd	alias --ftpproxy	--define '_ftpproxy !#:+'
 rpmd	alias --httpport	--define '_httpport !#:+'
 rpmd	alias --httpproxy	--define '_httpproxy !#:+'
+#==============================================================================
+rpmdb	alias --dbpath		--define '_dbpath !#:+'
+rpmdb	alias --ftpport		--define '_ftpport !#:+'
+rpmdb	alias --ftpproxy	--define '_ftpproxy !#:+'
+rpmdb	alias --httpport	--define '_httpport !#:+'
+rpmdb	alias --httpproxy	--define '_httpproxy !#:+'
 #==============================================================================
 rpme	alias --dbpath		--define '_dbpath !#:+'
 rpme	alias --ftpport		--define '_ftpport !#:+'
@@ -195,6 +201,12 @@ rpmi	alias --ftpport		--define '_ftpport !#:+'
 rpmi	alias --ftpproxy	--define '_ftpproxy !#:+'
 rpmi	alias --httpport	--define '_httpport !#:+'
 rpmi	alias --httpproxy	--define '_httpproxy !#:+'
+#==============================================================================
+rpmk	alias --dbpath		--define '_dbpath !#:+'
+rpmk	alias --ftpport		--define '_ftpport !#:+'
+rpmk	alias --ftpproxy	--define '_ftpproxy !#:+'
+rpmk	alias --httpport	--define '_httpport !#:+'
+rpmk	alias --httpproxy	--define '_httpproxy !#:+'
 #==============================================================================
 rpmq	alias --dbpath		--define '_dbpath !#:+'
 rpmq	alias --ftpport		--define '_ftpport !#:+'
@@ -265,13 +277,6 @@ rpmq	alias --last --qf '%|INSTALLTIME?{%{INSTALLTIME}}:{000000000}| %{NAME}-%{VE
 	--pipe "sort -r -n | sed 's,^[0-9]\+ ,,' | awk '{printf(\"%-45s %-s\n\", $1, substr($0,length($1)+2))}' "
 
 rpmq	alias --filesbypkg --qf '[%-25{=NAME} %{FILENAMES}\n]'
-#==============================================================================
-rpmt	alias --dbpath		--define '_dbpath !#:+'
-rpmt	alias --ftpport		--define '_ftpport !#:+'
-rpmt	alias --ftpproxy	--define '_ftpproxy !#:+'
-rpmt	alias --httpport	--define '_httpport !#:+'
-rpmt	alias --httpproxy	--define '_httpproxy !#:+'
-rpmt	alias --timecheck	--define '_timecheck !#:+'
 #==============================================================================
 rpmu	alias --dbpath		--define '_dbpath !#:+'
 rpmu	alias --ftpport		--define '_ftpport !#:+'
